# rung

./: .gitignore  .readthedocs.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NARRATIVE.md  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  build-your-own-domain.md  category_taxonomy.md  concepts.md  dedupe_design.md  design_references.md  index.md  postgres_for_everything.md  product_type_hierarchy.md  provenance_design.md  publish_split_design.md  quickstart.md  requirements.txt  scraping_framework_writeups.md  stage_contracts.md  store_history_design.md  worker_fleet_deployment.md
docs/assets/: extra.css
examples/: README.md  custom_domain.py  example_plugin.py  paper_fetcher.py
paper/: paper.bib  paper.md
rung/: access.py  addresses.py  brands.py  browser.py  cli.py  db.py  fx.py  geocode_points.py  geocode_rnf.py  http.py  models.py  normalize.py  queue.py  rate_limit.py  reference_db.py  registry.py  seed_companies.py  static_source.py  text.py
rung/data/: brand_parent.yml  category_aliases.yml  category_name_overrides.yml  companies.yml  company_homepages.yml  obtention_aliases.yml  product_type_aliases.yml  state_geo_anchors.yml  states.yml  strain_aliases.yml
rung/sources/: ai_fallback.py  dedupe.py  extract.py  homepage_discovery.py  state_lists.py  state_search.py
tests/: conftest.py  test_access.py  test_access_outcomes.py  test_addresses.py  test_ai_fallback.py  test_analysis_determinism.py  test_attestations.py  test_cli.py  test_commit_discipline.py  test_county_vintage_match.py  test_custom_domain_example.py  test_db.py  test_dedupe.py  test_example_plugin.py  test_extract.py  test_fx.py  test_geocode_cache.py  test_homepage_discovery.py  test_http.py  test_import_layering.py  test_normalize.py  test_observations.py  test_orchestrator_commit.py  test_paper_fetcher_example.py  test_pipeline.py  test_queue.py  test_rate_limit.py  test_reference_db.py  test_registry.py  test_roster_replace_restores_geocode.py  test_seed_companies.py  test_state_lists.py  test_state_search.py  test_static_source.py  test_store_products.py  test_text.py  test_text_io_encoding.py  test_threshold_deheap.py  test_write_isolation.py
tests/fixtures/: dutchie_dispensaries.json  trulieve_next_data.json
