[project]
name = "rung"
version = "0.1.0"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "click>=8.0",
    "curl-cffi>=0.15.0",
    "pdfplumber>=0.11.9",
    # playwright is NOT imported — it supplies the bundled Chromium binary that pydoll
    # drives (`playwright install chromium`); see browser._resolve_chrome_path. Do not prune.
    "playwright>=1.60.0",
    "psycopg[binary]>=3.2",
    "pydoll-python>=2.23.0",
    "pyyaml>=6.0.3",
    "scrapegraphai>=2.1.3",
    "selectolax>=0.3",
]

[project.scripts]
recon          = "rung.cli:recon_cmd"
bootstrap-dutchie = "rung.cli:bootstrap_dutchie_cmd"
bootstrap-pools = "rung.cli:bootstrap_pools_cmd"
seed-companies = "rung.seed_companies:main"
analyze        = "rung.cli:analyze"
search-states  = "rung.cli:search_states"
show-states    = "rung.cli:show_states"
find-lists     = "rung.cli:find_lists"
scrape-states  = "rung.cli:scrape_states"
scrape-company-stores = "rung.cli:scrape_company_stores_cmd"
scrape-menus   = "rung.cli:scrape_menus_cmd"
dedupe-stores  = "rung.cli:dedupe_stores_cmd"
compare-stores = "rung.cli:compare_stores_cmd"
prune-jobs     = "rung.cli:prune_jobs_cmd"
reap-jobs      = "rung.cli:reap_jobs_cmd"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path for test imports.
pythonpath = ["."]
# --strict-markers/--strict-config catch typos in markers/config; coverage runs as a
# ratchet (fail-under just below the measured core-only floor (~69%)) so it flags regressions
# without churning on small uncovered branches. cli.py / ai_fallback.py are the known
# 0%-covered gaps (see the backlog) — raise the floor as those get tests.
addopts = "--strict-markers --strict-config --cov=rung --cov-fail-under=60"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Extend ruff's default rules (E4/E7/E9/F) with the checks the dignified-python
# standard cares about: import-sorting (I), pyupgrade (UP), bugbear (B),
# comprehension cleanups (C4), simplifications (SIM), and ruff's own lints (RUF).
# E501 (line-length) is intentionally NOT enforced: the codebase predates `ruff
# format`, so wrapping it is a separate, deliberate reformat — not this gate's job.
extend-select = ["I", "UP", "B", "C4", "SIM", "RUF"]
# Ambiguous-unicode lints fire on the intentional → / – glyphs in docstrings and
# prose; suppress rather than ASCII-fold deliberate typography.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
# Keep `as`-aliased members in one grouped `from X import (...)` block (the existing
# house style) rather than exploding each into its own import statement.
combine-as-imports = true

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# The opt-in analysis scripts import the scientific stack (matplotlib/numpy/pandas/scikit-learn/…)
# inside `try/except ImportError` guards, marked `# ty: ignore[unresolved-import]` so the type-check
# passes in the core env where that stack is absent. The QA gate installs the `analysis` extra (so ty
# can actually type-check those scripts and catch real arg-type/overload bugs), which makes those same
# ignore comments look "unused" — but they are still required whenever the extra is absent. The rule is
# therefore env-dependent noise here, so silence it; genuine type errors are still error-level.
unused-ignore-comment = "ignore"
